# Pyscription

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
pyscription/: __init__.py  __main__.py
pyscription/cli/: __init__.py  agent_mode.py  conversational.py
pyscription/core/: __init__.py  autonomous_agent.py  document_processor.py  local_ai.py  mentor.py  pattern_discovery.py  project_analyzer.py  security_analyzer.py  vectorizer.py
pyscription/utils/: __init__.py  documentation_downloader.py  terminal_styling.py
tests/: __init__.py  conftest.py
